# django_project

./: pyproject.toml
django_project/: add_articles.py
django_project/article/: admin.py  forms.py  models.py  urls.py  views.py
django_project/article/migrations/: 0001_initial.py  0002_alter_article_title.py  0003_article_cover_alter_article_content.py  0004_remove_article_cover_article_cover_name.py  0005_articlev2.py  0006_rename_cover_name_articlev2_cover.py  0007_alter_articlev2_cover.py  0008_alter_articlev2_options_alter_author_options_and_more.py  0009_alter_article_content_alter_articlev2_content.py  0010_alter_articlev2_content.py
django_project/chat/: models.py  urls.py
django_project/chat/migrations/: 0001_initial.py  0002_alter_chat_message.py
django_project/django_project/: dbRouter.py  settings.py  urls.py  views.py
django_project/my_user/: models.py  urls.py  views.py
django_project/my_user/migrations/: 0001_initial.py  0002_delete_myuser.py
django_project/static/js/: init_select2.js  init_simplemde.js
django_project/templates/: article_detail.html  article_list.html  base.html  card.html  demo.html  demo_form.html  demo_html_tag.html  index.html  my_user.html  tag.html
django_project/templates/admin/: change_form.html  custom_admin_page.html
django_project/utility/: __init__.py  create_charts.py
