[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Eason_chiang <95297596+class83108@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
